force-app/main/default/objects/Utilization_Product_Location__c/Utilization_Product_Location__c.object-meta.xml
<CustomObject>
    <description>The manufacturing production location(s)</description>
    <label>Utilization Product Location</label>
    <nameField>
        <label>Utilization Product Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utilization Product Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>