force-app/main/default/objects/Utilization_Product_Location__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AF</fullName>
                <label>Afghanistan</label>
            </value>
            <value>
                <fullName>OAPI</fullName>
                <label>African Manufacturer Intellectual Property Organization</label>
            </value>
            <value>
                <fullName>ARIPO</fullName>
                <label>African Regional Manufacturer Intellectual Property Organization</label>
            </value>
            <value>
                <fullName>AL</fullName>
                <label>Albania</label>
            </value>
            <value>
                <fullName>AG</fullName>
                <label>Algeria</label>
            </value>
            <value>
                <fullName>AN</fullName>
                <label>Andorra</label>
            </value>
            <value>
                <fullName>AO</fullName>
                <label>Angola</label>
            </value>
            <value>
                <fullName>AV</fullName>
                <label>Anguilla</label>
            </value>
            <value>
                <fullName>AC</fullName>
                <label>Antigua/Barbud</label>
            </value>
            <value>
                <fullName>AR</fullName>
                <label>Argentina</label>
            </value>
            <value>
                <fullName>AM</fullName>
                <label>Armenia</label>
            </value>
            <value>
                <fullName>AA</fullName>
                <label>Aruba</label>
            </value>
            <value>
                <fullName>AS</fullName>
                <label>Australia</label>
            </value>
            <value>
                <fullName>AU</fullName>
                <label>Austria</label>
            </value>
            <value>
                <fullName>AJ</fullName>
                <label>Azerbaijan</label>
            </value>
            <value>
                <fullName>BF</fullName>
                <label>Bahamas</label>
            </value>
            <value>
                <fullName>BA</fullName>
                <label>Bahrain</label>
            </value>
            <value>
                <fullName>BG</fullName>
                <label>Bangladesh</label>
            </value>
            <value>
                <fullName>BB</fullName>
                <label>Barbados</label>
            </value>
            <value>
                <fullName>BO</fullName>
                <label>Belarus</label>
            </value>
            <value>
                <fullName>BE</fullName>
                <label>Belgium</label>
            </value>
            <value>
                <fullName>BH</fullName>
                <label>Belize</label>
            </value>
            <value>
                <fullName>BN</fullName>
                <label>Benin</label>
            </value>
            <value>
                <fullName>BD</fullName>
                <label>Bermuda</label>
            </value>
            <value>
                <fullName>BT</fullName>
                <label>Bhutan</label>
            </value>
            <value>
                <fullName>BL</fullName>
                <label>Bolivia</label>
            </value>
            <value>
                <fullName>BK</fullName>
                <label>Bosnia/Herzeg</label>
            </value>
            <value>
                <fullName>BC</fullName>
                <label>Botswana</label>
            </value>
            <value>
                <fullName>BR</fullName>
                <label>Brazil</label>
            </value>
            <value>
                <fullName>VI</fullName>
                <label>British Vi Iss</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>