force-app/main/default/objects/Utilization_Product_Location__c/fields/First_Date_Type__c.field-meta.xml
<CustomField>
    <fullName>First_Date_Type__c</fullName>
    <label>First Date Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Actual</fullName>
            </value>
            <value>
                <fullName>Expected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>