force-app/main/default/objects/Utilization_Product_Location__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AL</fullName>
                <label>Alabama</label>
            </value>
            <value>
                <fullName>AK</fullName>
                <label>Alaska</label>
            </value>
            <value>
                <fullName>AS</fullName>
                <label>American Samoa</label>
            </value>
            <value>
                <fullName>AE</fullName>
                <label>APO/FPO Europe</label>
            </value>
            <value>
                <fullName>AP</fullName>
                <label>APO/FPO OT Pac</label>
            </value>
            <value>
                <fullName>AA</fullName>
                <label>APO/FPO S Amer</label>
            </value>
            <value>
                <fullName>AZ</fullName>
                <label>Arizona</label>
            </value>
            <value>
                <fullName>AR</fullName>
                <label>Arkansas</label>
            </value>
            <value>
                <fullName>FQ</fullName>
                <label>Baker Island</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>California</label>
            </value>
            <value>
                <fullName>CO</fullName>
                <label>Colorado</label>
            </value>
            <value>
                <fullName>CT</fullName>
                <label>Connecticut</label>
            </value>
            <value>
                <fullName>DE</fullName>
                <label>Delaware</label>
            </value>
            <value>
                <fullName>DC</fullName>
                <label>Dist Of Col</label>
            </value>
            <value>
                <fullName>FM</fullName>
                <label>Fed Micronesia</label>
            </value>
            <value>
                <fullName>FL</fullName>
                <label>Florida</label>
            </value>
            <value>
                <fullName>GA</fullName>
                <label>Georgia</label>
            </value>
            <value>
                <fullName>GU</fullName>
                <label>Guam</label>
            </value>
            <value>
                <fullName>HI</fullName>
                <label>Hawaii</label>
            </value>
            <value>
                <fullName>HQ</fullName>
                <label>Howard Island</label>
            </value>
            <value>
                <fullName>ID</fullName>
                <label>Idaho</label>
            </value>
            <value>
                <fullName>IL</fullName>
                <label>Illinois</label>
            </value>
            <value>
                <fullName>IN</fullName>
                <label>Indiana</label>
            </value>
            <value>
                <fullName>IA</fullName>
                <label>Iowa</label>
            </value>
            <value>
                <fullName>JQ</fullName>
                <label>Johnston Atoll</label>
            </value>
            <value>
                <fullName>KS</fullName>
                <label>Kansas</label>
            </value>
            <value>
                <fullName>KY</fullName>
                <label>Kentucky</label>
            </value>
            <value>
                <fullName>KQ</fullName>
                <label>Kingman Reef</label>
            </value>
            <value>
                <fullName>LA</fullName>
                <label>Louisiana</label>
            </value>
            <value>
                <fullName>ME</fullName>
                <label>Maine</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>