force-app/main/default/objects/Utilization_Product_Location__c/fields/Utilization_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Manufacturer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Manufacturer</description>
    <label>Utilization Manufacturer</label>
    <referenceTo>Utilization_Manufacturers__c</referenceTo>
    <relationshipLabel>Utilization Product Locations</relationshipLabel>
    <relationshipName>Utilization_Product_Locations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>